log
Wed 27 Mar 2024 11:01:05 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f9b8a8c
Wed 27 Mar 2024 11:03:44 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:21: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   44 |     if(list == NULL)return;
      |                     ^~~~~~
list.c:42:8: note: declared here
   42 | void * firstList(List * list)
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8182c26
Wed 27 Mar 2024 11:04:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bf3ab2e
Wed 27 Mar 2024 11:07:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6d2d151
Wed 27 Mar 2024 11:07:54 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
c00c1dc
Wed 27 Mar 2024 11:11:42 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
66b76b5
Wed 27 Mar 2024 11:13:42 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
cb78fa8
Wed 27 Mar 2024 11:18:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
507efc8
Wed 27 Mar 2024 11:19:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
651cb5c
Wed 27 Mar 2024 11:23:10 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:52:14: error: ‘List’ {aka ‘struct List’} has no member named ‘c’
   52 |   return list->c
      |              ^~
list.c:52:17: error: expected ‘;’ before ‘}’ token
   52 |   return list->c
      |                 ^
      |                 ;
   53 | }
      | ~                
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a9f52b9
Wed 27 Mar 2024 11:24:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c6be307
Wed 27 Mar 2024 11:24:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dc9b079
Wed 27 Mar 2024 11:24:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4608d77
Wed 27 Mar 2024 11:25:42 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
a4d8f85
Wed 27 Mar 2024 11:33:26 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
33d5f85
Thu 28 Mar 2024 01:35:42 AM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|4
total_score: 25/70
11de10d
Thu 28 Mar 2024 01:37:11 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
25ab8ee
Thu 28 Mar 2024 01:37:43 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1311d8d
Thu 28 Mar 2024 01:38:46 AM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:59:11: error: ‘ultimoNode’ undeclared (first use in this function)
   59 |     while(ultimoNode->next != NULL)
      |           ^~~~~~~~~~
list.c:59:11: note: each undeclared identifier is reported only once for each function it appears in
list.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
951c3d7
Thu 28 Mar 2024 01:38:58 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
bb47c66
